# SGAPP

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1783621705209-07cce66205b4e8.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx  Modal.tsx  ShopDetailModal.tsx
src/contexts/: AuthContext.tsx  SnackbarContext.tsx
src/lib/: database.ts  local-adapter.ts  sqlite-adapter.ts  supabase-adapter.ts  supabase.ts
src/pages/: Backup.tsx  Dashboard.tsx  Garages.tsx  Login.tsx  MarketDetail.tsx  Markets.tsx  Settings.tsx  Shops.tsx
src/store/: DataContext.tsx  seedData.ts
src/types/: index.ts
supabase/migrations/: 20260703114614_create_shop_management_schema.sql
